2013-01-13 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/cinc2h.pl: New command option: --create-sfr16
          (This option is for the time being operates only at the pic16 series.)
	* device/non-free/include/pic16/pic18*.h,
	  device/non-free/lib/pic16/libdev/pic18*.c: Implementation of the __sfr16 type.

2013-01-12 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: New command option: --no-explanations

2013-01-12 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: New command option: --hex-constant

2013-01-12 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Faster the decoding of instructions.

2013-01-11 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: More control characters are recognized.
	  Refinement the align of explanations.

2013-01-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/main.c: Nearly exact instruction sizes for peephole
	  branch optimizations.

2013-01-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genSend): "fix" for bug #3600343

2013-01-10 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Simplified the code.

2013-01-10 Molnar Karoly <molnarkaroly AT users.sf.net>

	* doc/sdccman.lyx: Expanded the 6.2 (Tools) table.

2013-01-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/ralloc.c (packRegisters),
	* src/hc08/gen.c (aopForRemat): allow more rematerializations of
	  cast pointers
	* src/hc08/ralloc2.cc (operand_is_ax): fixed bug that misidentified
	  some register assignments as the register pair AX

2013-01-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y,
	* src/SDCCast.h,
	* src/SDCCast.c: Move the test condition of a for-loop to the end of
	  the loop if it is always true for the first iteration of the loop
	  and has no side-effects.
